--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -28,7 +28,6 @@
 	</scm>
 	<properties>
 		<java.version>23</java.version>
-		<spring-boot.run.main-class>com.example.demo.DemoApplication</spring-boot.run.main-class>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -60,6 +59,20 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.0</version>
 		</dependency>
 	</dependencies>
 
